# rag-project

./: .env.example  .gitignore  main.py  pyproject.toml
app/api/v1/endpoints/: query.py
app/dsa/: __init__.py
app/models/: request_models.py  response_models.py
app/services/: embedding_service.py  parsing_service.py  rag_service.py  retrieval_service.py
backend/: .gitignore  pyproject.toml
backend/app/agents/: graph.py  nodes.py  state.py  tools.py
backend/app/agents/helper/: document_grader.py  query_rewritter.py
backend/app/core/: config.py
backend/app/db/: vector_db.py
backend/app/dsa/: priority_queue.py  similarity.py
backend/app/services/: __init__.py  ingestion_service.py  parsing_service.py  rag_service.py  retrieval_service.py
backend/app/utils/: __init__.py  chuncking.py
frontend/: PLAN.md  package-lock.json  package.json
frontend/src/: App.css  App.tsx  index.css
frontend/src/components/Chat/: ChatWindow.css  ChatWindow.tsx  InputForm.css  InputForm.tsx  Message.css  Message.tsx
frontend/src/components/Layout/: AppHeader.css  AppHeader.tsx
frontend/src/components/Upload/: ProgressTracker.css  ProgressTracker.tsx  UploadZone.css  UploadZone.tsx
frontend/src/components/ui/: badge.tsx  button.tsx  card.tsx  input.tsx  textarea.tsx  theme-toggle.tsx
frontend/src/pages/: ChatPage.tsx  LoginPage.tsx  SignupPage.tsx
frontend/src/services/: api.ts
frontend/src/store/: chatSlice.ts  index.ts  uploadSlice.ts
frontend/src/store/slices/: authSlice.ts
frontend/src/theme/: ThemeProvider.tsx
frontend/src/types/: api.ts
(+1 files in other folders)
