[project]
name = "rag-using-data-structures"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.1",
    "python-dotenv>=1.0.0",
    "langchain>=1.2.12",
    "langchain-google-genai>=4.2.1",
    "langchain-ollama>=1.0.1",
    "langchain-text-splitters>=1.1.1",
    "langgraph>=1.1.2",
    "llama-cloud>=1.6.0",
    "numpy>=2.4.3",
    "pinecone>=8.1.1",
    "pydantic>=2.12.5",
    "uvicorn[standard]>=0.42.0",
]
